--- a/app/src/main/res/layout/dong_search_bai_hat.xml
+++ b/app/src/main/res/layout/dong_search_bai_hat.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#160f19">
 
     <ImageView
         android:id="@+id/imagesearchbaihat"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_margin="3dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="3dp"
         android:scaleType="fitXY"></ImageView>
 
     <TextView
@@ -21,7 +25,7 @@
         android:maxWidth="250dp"
         android:singleLine="true"
         android:text="Tên bài hát"
-        android:textColor="#0a0a0a"
+        android:textColor="#ffffff"
         android:textSize="18sp"></TextView>
 
     <TextView
@@ -45,6 +49,7 @@
         android:layout_height="30dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:layout_marginRight="15dp"
         android:src="@drawable/heart"></ImageView>
 
 </RelativeLayout>
