--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/textviewtitleplaylist"
         android:text="EM LÀ"
-        android:textColor="#3e3b3b"
+        android:textColor="#ffff"
         android:textSize="30sp"
         android:gravity="center"
         android:layout_marginTop="15dp"
@@ -28,13 +28,13 @@
         android:layout_below="@id/listviewplaylist"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:background="#c9c7c7"
+        android:background="#17111a"
         android:drawableLeft="@drawable/seemore"
         android:drawablePadding="10dp"
         android:paddingLeft="5dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:text="See more playlists"
-        android:textColor="#0a0a0a"
+        android:textColor="#ffff"
         android:textSize="19sp" />
 </RelativeLayout>
