--- a/app/src/main/res/layout/fragment_song.xml
+++ b/app/src/main/res/layout/fragment_song.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content">
         <TextView
             android:textStyle="bold"
-            android:textColor="#000000"
+            android:textColor="#ffff"
             android:textSize="20sp"
             android:text="FAVORITE SONG"
             android:layout_width="wrap_content"
