--- a/app/src/main/res/layout/fragment_topic_category.xml
+++ b/app/src/main/res/layout/fragment_topic_category.xml
@@ -11,7 +11,7 @@
             android:text="TOPIC &amp; CATEGORY"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="#000000"
+            android:textColor="#ffff"
             android:id="@+id/textviewtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
