--- a/app/src/main/res/layout/inline_album.xml
+++ b/app/src/main/res/layout/inline_album.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        >
+        android:background="#130d16">
 
         <ImageView
             android:id="@+id/imageviewalbum"
@@ -23,7 +23,7 @@
             android:scaleType="fitXY" />
 
         <TextView
-            android:textColor="#000000"
+            android:textColor="#ffff"
             android:maxWidth="250dp"
             android:textSize="20sp"
             android:text="Thương em là điều anh không thể ngờ"
