--- a/app/src/main/res/layout/inline_song.xml
+++ b/app/src/main/res/layout/inline_song.xml
@@ -2,12 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
+
     <ImageView
+        android:id="@+id/imageviewsong"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_margin="3dp"
-        android:id="@+id/imageviewsong"
-        android:scaleType="fitXY"/>
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="3dp"
+        android:scaleType="fitXY" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
