--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textviewtitleplaylist"
-        android:text="EM LÀ"
+        android:text="TOP 100"
         android:textColor="#3e3b3b"
         android:textSize="30sp"
         android:gravity="center"
