--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -5,46 +5,65 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:id="@+id/coordinatorlayout"
     tools:context=".Activity.SongListActivity">
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbarlayout"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="350dp"
+        android:id="@+id/appbarlayout"
+        android:fitsSystemWindows="true">
         <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsingtoolbar"
-            app:expandedTitleGravity="center|bottom"
-            app:expandedTitleMarginBottom="33dp"
-            android:background="@mipmap/ic_launcher"
-            android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/collapsingtoolbar"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true"
+            android:background="@mipmap/ic_launcher"
+            app:expandedTitleMarginBottom="33dp"
+            app:expandedTitleGravity="center|bottom">
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/custom_background_banner"/>
             <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:layout_collapseMode="pin"
-                android:id="@+id/toolbarlist"
-                android:elevation="6dp"
-                android:layout_width="match_parent"
-                android:layout_height="75dp">
+                android:id="@+id/toolbarsonglist"
+                android:elevation="6dp">
             </androidx.appcompat.widget.Toolbar>
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
                 android:elevation="6dp"
                 android:layout_marginTop="38dp"
                 android:src="@mipmap/ic_launcher"
                 android:layout_marginBottom="50dp"
                 android:layout_gravity="center"
-                android:id="@+id/imageviewsonglist"/>
+                android:id="@+id/imageviewsonglist"
+                android:layout_width="200dp"
+                android:layout_height="200dp"/>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
-<com.google.android.material.floatingactionbutton.FloatingActionButton
-    app:layout_behavior="@string/bottom_sheet_behavior"
-    app:layout_anchor="@id/appbarlayout"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        app:backgroundTint="#a845de"
+        android:src="@drawable/romanticmusic"
+        android:scaleType="fitXY"
+        app:fabSize="normal"
+        android:id="@+id/floatingactionbutton"
+        app:layout_anchorGravity="bottom|center"
+        app:layout_anchor="@id/appbarlayout"
+        app:layout_behavior="@string/bottom_sheet_behavior"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <androidx.core.widget.NestedScrollView
+        android:layout_marginTop="30dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerviewsonglist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
