--- a/app/src/main/res/layout/inline_song_list.xml
+++ b/app/src/main/res/layout/inline_song_list.xml
@@ -9,10 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textviewsonglistindex"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/imageviewsonglistindex"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
@@ -20,7 +20,7 @@
             android:textSize="20sp" />
         <TextView
             android:id="@+id/textviewnamesong"
-            android:layout_toRightOf="@id/textviewsonglistindex"
+            android:layout_toRightOf="@id/imageviewsonglistindex"
             android:ellipsize="end"
             android:maxWidth="270dp"
             android:text="Name Song"
@@ -34,7 +34,7 @@
             android:textColor="#979797"
             android:ellipsize="end"
             android:maxWidth="270dp"
-            android:layout_toRightOf="@id/textviewsonglistindex"
+            android:layout_toRightOf="@id/imageviewsonglistindex"
             android:layout_below="@id/textviewnamesong"
             android:id="@+id/textviewartist"
             android:layout_width="wrap_content"
