--- a/app/src/main/res/layout/activity_play_song.xml
+++ b/app/src/main/res/layout/activity_play_song.xml
@@ -44,6 +44,9 @@
             <SeekBar
                 android:id="@+id/seekbarsong"
                 android:layout_weight="9"
+                android:progressDrawable="@color/white"
+                android:maxHeight="3dp"
+                android:minHeight="3dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -102,8 +105,8 @@
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:src="@drawable/repeat"
-                android:layout_width="60dp"
-                android:layout_height="60dp"/>
+                android:layout_width="50dp"
+                android:layout_height="50dp"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
