--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -17,7 +17,7 @@
             android:text="Album"/>
         <TextView
             android:id="@+id/textviewseemorealbum"
-            android:textColor="#913677"
+            android:textColor="#FF06A2DF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
