--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -28,13 +28,14 @@
         android:layout_below="@id/listviewplaylist"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:background="#c9c7c7"
+        android:background="#EFEFEF"
         android:drawableLeft="@drawable/seemore"
         android:drawablePadding="10dp"
         android:paddingLeft="5dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:text="See more playlists"
+        android:textStyle="bold"
         android:textColor="#0a0a0a"
         android:textSize="19sp" />
 </RelativeLayout>
