--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.google.android.material.appbar.AppBarLayout
-        android:background="#3e3ee2"
+        android:background="#FF06A2DF"
         android:id="@+id/appbarlayoutsearchbaihat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -24,9 +24,9 @@
         android:visibility="gone"
         android:textColor="#f20"
         android:gravity="center"
-        android:text="Không có dữ liệu bài hát"
+        android:text="No Result"
         android:id="@+id/textviewkhongcodulieu"
-        android:textSize="35sp"
+        android:textSize="20sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </TextView>
