--- a/app/src/main/res/layout/inline_topic.xml
+++ b/app/src/main/res/layout/inline_topic.xml
@@ -8,5 +8,5 @@
         android:scaleType="fitXY"
         android:id="@+id/imageviewinlinetopic"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="150dp"/>
 </RelativeLayout>
