--- a/app/src/main/res/layout/inline_song.xml
+++ b/app/src/main/res/layout/inline_song.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#160f19">
+
     <ImageView
+        android:id="@+id/imageviewsong"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_margin="3dp"
-        android:id="@+id/imageviewsong"
-        android:scaleType="fitXY"/>
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="3dp"
+        android:scaleType="fitXY" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,13 +22,13 @@
         android:id="@+id/textviewsong"
         android:text="Name Song"
         android:textSize="18sp"
-        android:textColor="#363636"
+        android:textColor="#fff"
         android:ellipsize="end"
         android:maxLines="1"
         />
 
     <TextView
-        android:textColor="#8c8a8a"
+        android:textColor="#fff"
         android:textSize="18sp"
         android:text="Artistttttttttttttttttttttttttttttttttttttttttttttttt"
         android:layout_toRightOf="@id/imageviewsong"
