--- a/app/src/main/res/layout/activity_list_album.xml
+++ b/app/src/main/res/layout/activity_list_album.xml
@@ -11,7 +11,8 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarallalbum"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="?attr/actionBarSize"
+        app:navigationIcon="@drawable/iconbacktest">
     </androidx.appcompat.widget.Toolbar>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerviewAllAlbum"
