--- a/app/src/main/res/layout/activity_list_play_list.xml
+++ b/app/src/main/res/layout/activity_list_play_list.xml
@@ -10,7 +10,8 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:id="@+id/toolbarplaylist"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="?attr/actionBarSize"
+        app:navigationIcon="@drawable/iconbacktest">
 
     </androidx.appcompat.widget.Toolbar>
 
