--- a/app/src/main/res/layout/inline_song.xml
+++ b/app/src/main/res/layout/inline_song.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#160f19">
+    android:background="#252525"
+    android:layout_marginBottom="10dp">
 
     <ImageView
         android:id="@+id/imageviewsong"
